fix: no more ugly line wrapping

--- a/src/common/player/playback.scss
+++ b/src/common/player/playback.scss
@@ -1,4 +1,5 @@
 $opacity-loading: 0.3;
+$width-control: 100px;
 
 .playback {
 	position: relative;
@@ -15,18 +16,18 @@ $opacity-loading: 0.3;
 		display: flex;
 	}
 
-	&__spinner {
-		position: absolute;
-		z-index: 11;
-		top: 50%;
-		left: 10px;
-		transform: translateY(-50%);
-		display: none;
+	// &__spinner {
+	// 	position: absolute;
+	// 	z-index: 11;
+	// 	top: 50%;
+	// 	left: 10px;
+	// 	transform: translateY(-50%);
+	// 	display: none;
 
-		.playback--loading & {
-			display: block;
-		}
-	}
+	// 	.playback--loading & {
+	// 		display: block;
+	// 	}
+	// }
 
 	&--shown {
 		transform: translateY(0);
@@ -37,7 +38,7 @@ $opacity-loading: 0.3;
 	}
 
 	&__control {
-		width: 100px;
+		width: $width-control;
 		padding-left: 10px;
 		display: inline-block;
 		margin-top: 0;
@@ -62,6 +63,9 @@ $opacity-loading: 0.3;
 		opacity: 1;
 		transition: opacity 0.1s ease-in-out;
 		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		width: calc(100% - $width-control);
 
 		&:hover {
 			cursor: pointer;
